reformatted code and connected with database from IntelliJ