@@ -2,11 +2,7 @@ package com.mrdarip.bakery;
 
 import com.mrdarip.bakery.data.DAO.MySqlPlateDAO;
 import com.mrdarip.bakery.data.DAO.PlateDao;
-import com.mrdarip.bakery.data.DAO.RAMPlateDao;
 import com.mrdarip.bakery.data.entity.Plate;
-import java.net.URL;
-import java.util.ResourceBundle;
-import java.util.stream.Collectors;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
@@ -16,13 +12,17 @@ import javafx.scene.control.TextField;
 import javafx.scene.control.ToggleButton;
 import javafx.scene.layout.FlowPane;
 
+import java.net.URL;
+import java.util.ResourceBundle;
+import java.util.stream.Collectors;
+
 /**
  * FXML Controller class
  *
  * @author mrdarip
  */
 public class EjemploController implements Initializable {
-    
+
     PlateDao dao = new MySqlPlateDAO();
 
     @FXML
@@ -35,12 +35,12 @@ public class EjemploController implements Initializable {
     private ToggleButton orderToggle;
     @FXML
     private ScrollPane flowPaneScroll;
-    
+
     @FXML
     void onOrderToggleChange(ActionEvent event) {
         updateOrderToggleIcon();
     }
-    
+
     @FXML
     void navigateToTop(ActionEvent event) {
         flowPaneScroll.setVvalue(flowPaneScroll.hvalueProperty().doubleValue());
@@ -53,18 +53,16 @@ public class EjemploController implements Initializable {
     @Override
     public void initialize(URL url, ResourceBundle rb) {
         initializeOrderCombo();
-        
         updatePlatesFlowPane();
-        
         updateOrderToggleIcon();
-    }    
+    }
 
     protected void initializeOrderCombo() {
         orderCombo.getItems().removeAll(orderCombo.getItems());
         orderCombo.getItems().addAll("Stars", "Name", "Duration", "Difficulty");
     }
-    
-    private void updateOrderToggleIcon(){
+
+    private void updateOrderToggleIcon() {
         if (orderToggle.isSelected()) {
             orderToggle.setText("↑");
         } else {
@@ -74,13 +72,6 @@ public class EjemploController implements Initializable {
 
     private void updatePlatesFlowPane() {
         //platesFlowPane.getChildren().clear();
-        
-        platesFlowPane.getChildren().addAll(
-            dao.getPlatesPage(0, 0).
-                stream().
-                map(Plate::getAsCard).
-                collect(Collectors.toList())
-        );
-        
+        platesFlowPane.getChildren().addAll(dao.getPlatesPage(0, 0).stream().map(Plate::getAsCard).toList());
     }
 }
